--- a/firstpage.html
+++ b/firstpage.html
@@ -16,6 +16,15 @@
         <h3>
             Title 3
         </h3>
+        <h4>
+            Title 4
+        </h4>
+        <h5>
+            Title 5
+        </h5>
+        <h6>
+            Title 6
+        </h6>
         <a href="https://www.w3schools.com/html/html_basic.asp">This is a link</a>
         <p></p>
         <img src="IMG_20220715_215346.jpg" alt="Image">
