--- a/firstpage.html
+++ b/firstpage.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>
-            Title 
+            Title 1
         </h1>
         <h2>
             Title 2
@@ -25,6 +25,9 @@
         <h6>
             Title 6
         </h6>
+        <p>
+            Hello world. Welcome to web development. 
+        </p>
         <a href="https://www.w3schools.com/html/html_basic.asp">This is a link</a>
         <p></p>
         <img src="IMG_20220715_215346.jpg" alt="Image">
