--- a/firstpage.html
+++ b/firstpage.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>
-            New Project
+            New HTML Project
         </title>
     </head>
 
     <body>
         <h1>
-            Title 1
+            Introduction
         </h1>
         <h2>
             Title 2
