--- a/firstpage.html
+++ b/firstpage.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>
-            Introduction
+            Introduction to HTML
         </h1>
         <h2>
             Title 2
